--- a/apps/micro-app-a/package.json
+++ b/apps/micro-app-a/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "global-front-door",
+  "name": "micro-app-a",
   "version": "0.0.1",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3000",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit"
