--- a/apps/micro-app-a/package.json
+++ b/apps/micro-app-a/package.json
@@ -9,7 +9,8 @@
     "start": "next start -p 3001",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf node_modules dist .next"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
