--- a/apps/micro-app-b/package.json
+++ b/apps/micro-app-b/package.json
@@ -9,7 +9,8 @@
     "start": "next start -p 3002",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf .next .turbo"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
