--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "turbo dev",
     "start": "turbo start",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "clean": "turbo clean"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
