--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
       "dependsOn": ["build"],
       "cache": false,
       "persistent": true
+    },
+    "clean": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
